# GIST-Campus-EMS

./: .gitignore  README.md  gist_campus_ems.ipynb  merge1.ipynb  merge2.ipynb  model.ipynb  preprocess.ipynb  pyproject.toml
algorithm/: schedule_algorithm.py
electrical-load/: load_prediction_model.py  merged_data.csv  model.ipynb  preprocess.ipynb
electrical_load/: load_prediction_model.py  merged_data.csv  preprocess.ipynb
filtered/: merged_dataset.csv  건국동_1시간강수량_20220630_20220831_filtered.csv  건국동_1시간기온_20220630_20220831_filtered.csv  건국동_강수확률_20220630_20220831_filtered.csv  건국동_습도_20220630_20220831_filtered.csv  건국동_일최고기온_20220630_20220831_filtered.csv  건국동_일최저기온_20220630_20220831_filtered.csv  건국동_풍속_20220630_20220831_filtered.csv  건국동_풍향_20220630_20220831_filtered.csv  건국동_하늘상태_20220630_20220831_filtered.csv
solar-power-report/: 태양광 일보.gcf_2022-07-01_23-59-28.xls  태양광 일보.gcf_2022-07-04_23-59-04.xls  태양광 일보.gcf_2022-07-07_23-59-10.xls  태양광 일보.gcf_2022-07-08_23-59-22.xls  태양광 일보.gcf_2022-07-10_23-59-16.xls  태양광 일보.gcf_2022-07-12_23-59-10.xls  태양광 일보.gcf_2022-07-13_23-59-22.xls  태양광 일보.gcf_2022-07-17_23-59-10.xls  태양광 일보.gcf_2022-07-21_23-59-28.xls  태양광 일보.gcf_2022-07-29_23-59-04.xls  태양광 일보.gcf_2022-07-30_23-59-16.xls  태양광 일보.gcf_2022-07-31_23-59-28.xls  태양광 일보.gcf_2022-08-01_23-59-10.xls  태양광 일보.gcf_2022-08-04_23-59-16.xls  태양광 일보.gcf_2022-08-06_23-59-10.xls  태양광 일보.gcf_2022-08-09_23-59-16.xls  태양광 일보.gcf_2022-08-13_23-59-04.xls  태양광 일보.gcf_2022-08-14_23-59-16.xls  태양광 일보.gcf_2022-08-15_23-59-27.xls  태양광 일보.gcf_2022-08-18_23-59-03.xls  (+3 more)
(+432 files in other folders)
