[tool.poetry]
name = "gist-campus-ems"
version = "0.1.0"
description = ""
authors = ["y00njae <rladbswo12@gist.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
xlrd = "^2.0.1"
pulp = "^2.7.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^7.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
